<resources>
    <string name="app_name">Cheesy Airlines</string>
    <string name="et_ciudad_origen">Departure</string>
    <string name="et_ciudad_destino">Destination</string>
    <string name="todo">TODO</string>
    <string name="tv_datos">Personal data</string>
    <string name="et_name">Name</string>
    <string name="et_surname">Surnames</string>
    <string name="et_address">Address</string>
    <string name="et_phone">Phone number</string>
    <string name="et_email">Email</string>
    <string name="switch_text">Reduced mobility</string>
    <string name="cb_first_class">First class</string>
    <string name="cb_window_seat">Windowed seat</string>
    <string name="cb_pet">Pet</string>
    <string name="cb_breakfast">Breakfast</string>
    <string name="cb_lunch">Lunch</string>
    <string name="cb_dinner">Dinner</string>
    <string name="tv_insurance">Insurance</string>
    <string name="rb_yes">Yes</string>
    <string name="rb_no">No</string>
    <string name="bt_buy">Buy</string>
    <string name="bt_certified_buy">Certified buy</string>
    <string name="action_settings">My account</string>
    <string name="action_settings1">My travels</string>
    <string name="action_settings2">Boarding passes</string>
    <string name="action_settings3">About fly</string>
    <string name="action_settings4">Actualized Info</string>
    <string name="action_settings5">Gift Tickets</string>
    <string name="action_settings6">Fly magazines</string>
    <string name="action_settings7">Terms and Conditions</string>
    <string name="action_settings8">Help</string>
    <string name="action_settings9">Contact</string>
    <string name="action_settings10">Privacy politics</string>
    <string name="action_settings11">Privacy configuration</string>
    <string name="action_settings12">Personal Data</string>
    <string name="action_settings13">Travelling documents</string>
    <string name="action_settings14">Travelling partners</string>
    <string name="buy_now_snack">An error has happened</string>
    <string name="buy_now_error">Retry</string>
    <string name="title_alert">Normal buy</string>
    <string name="msg_alert">You are going to choose normal buy, are you sure about this?</string>
    <string name="tv_message_sir_mr">Mr.Pepe, your travel from Madrid to London have been purchased.</string>
    <string name="tv_extras">Extras chosen:</string>
    <string name="et_date_departure">Leaving</string>
    <string name="et_date_destination">Arrival</string>
    <string name="tv_price">Price: </string>
    <string name="bt_back">Back</string>
    <string name="bt_next">Next</string>
    <string name="bt_final">Finalize</string>
    <string name="tv_receipt_title">Receipt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>