<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:layout_gravity="center"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="14dp"
                android:gravity="center"
                android:text="@string/title_alert"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text="@string/msg_alert"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <FrameLayout
        android:id="@+id/frmNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="50dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/cancel"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/todo"
            android:src="@android:color/transparent"
            app:backgroundTint="@color/cancel_button"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />

        <ImageView
            android:id="@+id/cancelBuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:elevation="6dp"
            app:srcCompat="@drawable/cancel_buy"
            tools:ignore="ImageContrastCheck" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frmOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginTop="75dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buy"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/todo"
            android:src="@android:color/transparent"
            app:backgroundTint="@color/buy_alert_button"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

        <ImageView
            android:id="@+id/imgBuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:elevation="6dp"
            app:srcCompat="@drawable/positive_buy"
            tools:ignore="ImageContrastCheck" />
    </FrameLayout>
</FrameLayout>