<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BillFragment">



    <Button
        android:id="@+id/btFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/bt_final"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvReceiptBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btFinal"
        app:layout_constraintEnd_toEndOf="@+id/plane_icon"
        app:layout_constraintStart_toStartOf="@+id/plane_icon"
        app:layout_constraintTop_toBottomOf="@+id/tvExtraTitle"
        app:layout_constraintVertical_bias="0.14" />

    <TextView
        android:id="@+id/tvReceiptTitle"
        style="@style/font_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/tv_receipt_title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tvReceiptBody"
        app:layout_constraintEnd_toEndOf="@+id/plane_icon"
        app:layout_constraintStart_toStartOf="@+id/plane_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/tvFlightDeparture"
        style="@style/font_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/plane_icon"
        app:layout_constraintEnd_toStartOf="@+id/plane_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/plane_icon" />

    <TextView
        android:id="@+id/tvFlightDestination"
        style="@style/font_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/plane_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/plane_icon"
        app:layout_constraintTop_toTopOf="@+id/plane_icon" />

    <ImageView
        android:id="@+id/plane_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/tvReceiptBody"
        app:layout_constraintEnd_toStartOf="@+id/tvFlightDestination"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvFlightDeparture"
        app:layout_constraintTop_toBottomOf="@+id/tvReceiptTitle"
        app:layout_constraintVertical_bias="0.16000003"
        app:srcCompat="@drawable/plane" />

    <TextView
        android:id="@+id/tvExtraTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/extras_selected"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btFinal"
        app:layout_constraintEnd_toEndOf="@+id/plane_icon"
        app:layout_constraintStart_toStartOf="@+id/plane_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/tvDates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvExtraTitle"
        app:layout_constraintEnd_toEndOf="@+id/plane_icon"
        app:layout_constraintStart_toStartOf="@+id/plane_icon"
        app:layout_constraintTop_toBottomOf="@+id/plane_icon" />

    <TextView
        android:id="@+id/tvThanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btFinal"
        app:layout_constraintEnd_toEndOf="@+id/plane_icon"
        app:layout_constraintStart_toStartOf="@+id/plane_icon"
        app:layout_constraintTop_toBottomOf="@+id/tvReceiptBody"
        app:layout_constraintVertical_bias="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>